--- a/src/main/resources/templates/nav/about.html
+++ b/src/main/resources/templates/nav/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:replace="fragments :: head(About)" />
+<head th:replace="fragments :: about(About)" />
 <body>
 <nav th:replace="fragments :: navbar" />
 <div class="container-fluid" id="content-wrap">
