--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -74,16 +74,6 @@ body {
     font-size: 2rem;
 }
 
-/*.go {*/
-    /*margin: 0 auto;*/
-    /*color: #FFFFFF;*/
-    /*border-radius: 8px;*/
-    /*font-size: 1.5rem;*/
-    /*background: none;*/
-    /*border: 1px solid #FFFFFF;*/
-    /*opacity: 0.8;*/
-/*}*/
-
 #get-info {
     margin: 0 auto;
     color: #FFFFFF;
@@ -153,6 +143,7 @@ a:visited {
 
 /*TODO Change these to have box shading on top and bottom*/
 .colored-tile {
+    background-image: url('../img/congruent_pentagon.png');
     box-shadow: 0 4px 8px 0 #563444;
     color: #ffffff;
     text-align: center;
@@ -161,17 +152,8 @@ a:visited {
     width: 100vw;
 }
 
-/*TODO This will be changed to #content-wrap:nth-child(even)*/
-.colored-tile:nth-of-type(even) {
-    background-color: #1BB0CE;
-}
-
-/*TODO This will be changed to #content-wrap:nth-child(odd)*/
-.colored-tile:nth-of-type(odd) {
-    background-color: #00B4FF;
-}
-
 .intro-title {
+    background-color: #201419;
     position: relative;
     top: 30%;
     transform: translateY(-50%);
@@ -317,31 +299,6 @@ footer {
 #updateProfile{
     font-size: 25px;
     color: white;
-}
-
-#loginHeader{
-    font-family: 'Monoton', cursive;
-    font-size: 3em;
-}
-
-#username{
-    border-radius: 2px;
-    background-color: #515151;
-    color: white;
-}
-
-#password{
-    border-radius: 2px;
-    background-color: #515151;
-    color: white;
-}
-
-#usernameLbl{
-    font-size: 15px;
-}
-
-#passwordLbl{
-    font-size: 15px;
 }
 
 .semi-transparent-button {
