updated login.html -added closing slash for img tag
updated ViewController.java
-fixed bug preventing non-logged users from seeing index pg.

added six images for backgrounds.

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -6,7 +6,7 @@
 
 <div class="col-sm-6 col-sm-offset-3 text-center moveFldsDiv">
     <h1 id="loginHeader">LifeMap</h1>
-    <img th:src="@{/img/005-gps.svg}" alt="gps">
+    <img th:src="@{/img/005-gps.svg}" alt="gps"/>
     <br/>
 
     <form th:action="@{/login}" th:method="post" class="form-horizontal">
