--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -4,6 +4,9 @@
 <body>
 <nav th:replace="fragments :: navbar" />
 <div class="container" id="content-wrap">
+  <div id="profile-tag">
+    Profile
+  </div>
   <div id="moveAllFlds">
     <div>
         <h4 class="label-update" >Update Your Credentials</h4>
@@ -19,6 +22,7 @@
            data-title="Username: " th:text="${user.username}">
         </a>
       </div>
+      <div id="user-pass-space"></div>
       <div>
           <label for="email">Email</label>
       </div>
@@ -39,21 +43,21 @@
       <h4 class="label-update ">Additional Search Options</h4>
       </div>
         <form th:action="@{/user/search/config}" th:method="POST" th:object="${user}">
-        <label for="business-info">Business
+        <label class="Additional-item-right" for="business-info">Business
           <input name="_business" value="on" type="hidden"/>
           <input id="business-info" type="checkbox" checked="checked" th:field = "*{configuration.business}" name="business" />
         </label>
-        <label for="healthcare-info">Health Care
+        <label class="Additional-item-right" for="healthcare-info">Health Care
           <input name="_healthcare" value="on" type="hidden"/>
           <input id="healthcare-info" type="checkbox" checked="checked" th:field = "*{configuration.healthcare}" name="healthcare" />
         </label>
-        <label for="job-market-info">Job Market
+        <label class="Additional-item-right" for="job-market-info">Job Market
          <input id="job-market-info" type="checkbox" checked="checked" th:field="*{configuration.jobMarket}" name="job-market" />
         </label>
-        <label for="tolerance-info">Tolerance
+        <label class="Additional-item-right" for="tolerance-info">Tolerance
           <input id="tolerance-info" type="checkbox" checked="checked" th:field = "*{configuration.tolerance}" name="tolerance" />
         </label>
-        <label for="outdoors-info">Outdoors
+        <label class="Additional-item-right" for="outdoors-info">Outdoors
         <input id="outdoors-info" type="checkbox" checked="checked" th:field = "*{configuration.outdoors}" name="outdoors" />
         </label>
         <button id="extra-info-search">Search</button>
