--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -76,11 +76,11 @@ body {
 
 #get-info {
     margin: 0 auto;
-    color: #FFFFFF;
+    color: black;
     border-radius: 8px;
     font-size: 1.3em;
     background: none;
-    border: 1px solid #FFFFFF;
+    border: 1px solid black;
     opacity: 0.8;
 }
 
@@ -527,4 +527,8 @@ i {
 
 #clean-img div{
     padding-top: 12%;
+}
+
+.center {
+    margin: 0 auto;
 }
