Updated and (just about) completed about.html and about.css. -Responsive and styled. TODO: take out/change 'simplesauce team' footer and link.
Updated ajax.js.
-Gathered all information and ready to display to view.
-added down arrow that will (eventually) take user to bottom of page.

--- a/src/main/resources/templates/nav/about.html
+++ b/src/main/resources/templates/nav/about.html
@@ -4,9 +4,9 @@
 <body>
 <nav th:replace="fragments :: navbar" />
 <div class="container-fluid" id="content-wrap">
-    <div class="">
+    <div id="pic-container">
         <div class="pic-self col-4 col-sm-4 col-md-4 col-lg-4">
-            <P class="pic-name">Everardo Sifuentes</P>
+            <p class="pic-name">Everardo Sifuentes</p>
             <img id="test-rotate" src="/img/EverardoSifuentes.jpeg" />
             <div class="links-row">
                 <a href="https://github.com/syee4sev"  target="_blank"><img src="/img/GitHub_Logo_White.png" /></a>
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="pic-self col-4 col-sm-4 col-md-4 col-lg-4">
-            <P class="pic-name">James Carrico</P>
+            <p class="pic-name">James Carrico</p>
             <img src="/img/JamesCarrico.jpg" />
             <div class="links-row">
                 <a href="https://github.com/Jerik0" target="_blank"><img src="/img/GitHub_Logo_White.png" /></a>
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="pic-self col-4 col-sm-4 col-md-4 col-lg-4">
-            <P class="pic-name">Jaime Moncada</P>
+            <p class="pic-name">Jaime Moncada</p>
             <img src="/img/JaimeMoncada.jpg" />
             <div class="links-row">
                 <a href="https://github.com/jmoncad2" target="_blank"><img src="/img/GitHub_Logo_White.png" /></a>
@@ -33,7 +33,6 @@
             </div>
         </div>
     </div>
-<footer th:replace="fragments :: footer" />
 </div>
 <script th:replace="fragments :: scripts" />
 </body>
