--- a/src/main/resources/static/css/about.css
+++ b/src/main/resources/static/css/about.css
@@ -1,3 +1,78 @@
 body {
-  background: url('../img/swirl_pattern.png') repeat fixed;
+  box-sizing: border-box;
+  background: url('../img/maps-board.png') no-repeat fixed center;
+  background-color: #2c2c2c;
+  background-size: cover;
+}
+
+.pic-self {
+  background-image: linear-gradient(to top, #515151 92%, #00B4FF 8%);
+  margin: 5px;
+}
+
+.pic-self:first-child {
+  background-image: linear-gradient(to top, #515151 86.5%, #00B4FF 13.5%);
+  margin: 5px;
+}
+
+.pic-name {
+  text-align: center;
+  /*background-color: #00B4FF;*/
+  width: 100%;
+  color: #EEEEEE;
+  font-size: 2em;
+}
+
+.pic-self img{
+  border: 2px solid #ffffff;
+  border-radius: 10px;
+  width: 100%;
+  height: 80%;
+}
+
+#test-rotate {
+  transform: rotate(180deg);
+}
+
+.links-row a img{
+  margin: 5px;
+  border: 1px solid white;
+  border-radius: 5px;
+  width: 30%;
+  height: 30%;
+}
+
+.links-row a img:hover {
+  background-color: rgba(81, 81, 81, 0.8);
+}
+
+.links-row:first-child img{
+  margin-left: 0;
+}
+
+.links-row:last-child img{
+  margin-right: 0;
+}
+
+@media (min-width: 768px) {
+  #content-wrap {
+    padding: 0;
+  }
+
+  #pic-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .pic-self {
+    background-image: linear-gradient(to top, #515151 92%, #00B4FF 8%);
+    width: 31%;
+    margin: 2px;
+  }
+
+  .pic-self:first-child {
+    background-image: linear-gradient(to top, #515151 86%, #00B4FF 14%);
+    width: 30%;
+    height: 50%;
+  }
 }
