--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -6,9 +6,6 @@ html {
 html, body {
     height: 100%;
     box-sizing: border-box;
-    background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
 }
 
 *:focus {
@@ -16,11 +13,12 @@ html, body {
 }
 
 body {
-    outline: none;
-    margin: 0;
-    font-family: Edelsans, Avenir, sans-serif;
-    color: #201419;
-    background-color: #99bab8;
+  background-size: cover;
+  background: url('../img/gplaypattern.png') repeat fixed #99bab8;
+  outline: none;
+  margin: 0;
+  font-family: Edelsans, Avenir, sans-serif;
+  color: #201419;
 }
 
 .cntr-text {
@@ -92,6 +90,8 @@ a:visited {
 
 /*Wraps everything below navbar*/
 #content-wrap {
+    width: 90%;
+    margin: 0 auto;
     margin-top: 75px;
     display: flex;
     flex-direction: column;
@@ -104,6 +104,7 @@ a:visited {
 }
 
 #location-image {
+    border: 2px #a0ffe2 solid;
     width: 100%;
 }
 
@@ -112,7 +113,8 @@ a:visited {
 }
 
 #location-info {
-    background-color: #1BB0CE;
+  color: #e4eeec;
+    background-color: #121212;
     width: 100%;
     box-shadow: 0 4px 8px 0 #563444;
     text-align: center;
@@ -153,25 +155,26 @@ a:visited {
 }
 
 .intro-title {
-    background-color: #201419;
-    position: relative;
-    top: 30%;
-    transform: translateY(-50%);
+  padding: 5px;
+  background-color: #201419;
+  position: relative;
+  top: 30%;
+  transform: translateY(-50%);
 }
 
 .section {
-    height: 100vh;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    flex-direction: column;
-    padding: 2vw;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    font-size: 4vw;
+  height: 100vh;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  padding: 2vw;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  font-size: 4vw;
 }
 
 /*==================INFO CARDS CSS==================*/
@@ -199,16 +202,17 @@ a:visited {
 }
 
 .info-card {
+    border-radius: 8px;
     color: #201419;
     position: relative;
-    box-shadow: 0 4px 8px 0 #563444;
+    box-shadow: 0 4px 8px 0 #19211f;
     margin: 5px auto;
     margin-bottom: 0;
     height: 400px;
     width: 650px;
     font-size: 1em;
     text-align: center;
-    background-color: #dde4d3;
+    background-color: #bffff0;
 }
 
 /*TODO Change the position of this element to be always in the top left of .info-card*/
@@ -355,29 +359,10 @@ footer {
     margin-top: 15px;
 }
 
-.links-row a img{
-    width: 18%;
-    height: 18%;
-}
-
-.pic-self img{
-    width: 60%;
-    height: 50%;
-}
-
-.pic-name {
-    text-align: start;
-    font-size: 2em;
-}
-
-#test-rotate {
-    transform: rotate(180deg);
-}
-
 /*SIDE NAVIGATION*/
 .to-top-btn {
     position: fixed;
-    bottom: 50px;
+    bottom: 150px;
     right: -100px;
     z-index: 999999;
     background: gray;
@@ -394,15 +379,42 @@ footer {
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
 }
+
 .to-top-btn:hover {
      color: white;
      background: black;
      cursor: pointer;
  }
 
+.to-btm-btn {
+  position: fixed;
+  bottom: 50px;
+  right: -100px;
+  z-index: 999999;
+  background: gray;
+  color: white;
+  margin: 0;
+  padding: 0;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  opacity: 0.8;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.to-btm-btn:hover {
+  color: white;
+  background: black;
+  cursor: pointer;
+}
+
 .showme {
     position: fixed;
-    bottom: 50px;
+    /*bottom: 50px;*/
     z-index: 999999;
     background: gray;
     color: white;
@@ -426,7 +438,6 @@ i {
     margin-left: -2px;
 }
 
-
 /*new for check boxes*/
 .extra-info{
     margin-right: 10px;
@@ -434,13 +445,6 @@ i {
 
 @media screen and (min-width: 768px) {
 
-/*form#city-input {*/
-    /*color: #515151;*/
-    /*border-radius: 8px;*/
-    /*text-align: center;*/
-    /*font-size: .5rem;*/
-    /*width: 3em;*/
-/*}*/
     .btn-link {
         margin-top: 11%;
     }
