--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,22 +2,22 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <!--HEAD FRAGMENT-->
-<head th:fragment="head(title)">
+<div th:fragment="head(title)">
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1" />
     <title th:text="${title}"></title>
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/globalGym.css" />
-    <!--<link rel="shortcut icon" href="./img/logoplaceholder.ico" type="image/ico"/>-->
+    <link rel="shortcut icon" th:href="@{/img/006-map.ico}" type="image/ico"/>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous">
     </script>
-</head>
+</div>
 
 <!--LOGIN HEAD FRAGMENT-->
-<head th:fragment="login(title)">
+<div th:fragment="login(title)">
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1" />
     <title th:text="${title}"></title>
@@ -30,10 +30,10 @@
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous">
     </script>
-</head>
+</div>
 
 <!--ABOUT HEAD FRAGMENT-->
-<head th:fragment="about(title)">
+<div th:fragment="about(title)">
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1" />
     <title th:text="${title}"></title>
@@ -46,7 +46,7 @@
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous">
     </script>
-</head>
+</div>
 
 <body>
 <!--SIDE BAR NAV-->
@@ -120,7 +120,9 @@
     <div class="btn to-top-btn hidden-xs hidden-sm">
         <i class="glyphicon glyphicon-arrow-up"></i>
     </div>
-    <p>&nbsp;</p>
+    <div class="btn to-btm-btn hidden-xs hidden-sm">
+        <i class="glyphicon glyphicon-arrow-down"></i>
+    </div>
 </nav>
 
 <!--FOOTER FRAGMENT-->
@@ -154,7 +156,6 @@
   <script src="/JS/ajax.js"></script>
   <script src="/JS/forms.js"></script>
 </scripts>
-
 
 </body>
 </html>
