--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -27,7 +27,23 @@
     </div>
 
     <div id="info-card-container">
+      <div id="happiness" class="info hidden"></div>
+      <div id="apartment" class="info hidden"></div>
+      <div id="cost-of-living" class="info hidden"></div>
+      <div id="startups" class="info hidden"></div>
+      <div id="culture" class="info hidden"></div>
+      <div id="weather" class="info hidden"></div>
+      <div id="cleanliness" class="info hidden"></div>
+      <div id="salary" class="info hidden"></div>
+      <div id="business-div" class="info hidden"></div>
+      <div id="healthcare-div" class="info hidden"></div>
+      <div id="jobmarket-div" class="info hidden"></div>
+      <div id="tolerance-div" class="info hidden"></div>
+      <div id="outdoors-div" class="info hidden"></div>
     </div>
+
+    <div id="icon-container"></div>
+
     <div style="display: none;" th:object="${user.configuration}">
       <div id="business" th:data="*{business}"></div>
       <div id="healthcare" th:data="*{healthcare}"></div>
