Circular Icon Selector will now select correct divs and display appropriate (logged in/out) information.
Styling is coming up next.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -146,7 +146,7 @@
     const MAPS_KEY = "@environment.getProperty('google.maps.key')";
     const business = $('#business').attr('data'); //0 or 1
     const healthCare = $('#healthcare').attr('data');
-    const jobMarket  = $('#jobMarket').attr('data');
+    const jobMarket  = $('#jobmarket').attr('data');
     const tolerance  = $('#tolerance').attr('data');
     const outdoors = $('#outdoors').attr('data');
     const user = $('#username').text();
