--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -47,7 +47,7 @@
     <div style="display: none;" th:object="${user.configuration}">
       <div id="business" th:data="*{business}"></div>
       <div id="healthcare" th:data="*{healthcare}"></div>
-      <div id="jobmarket" th:data="*{jobMarket}"></div>
+      <div id="jobmarket" th:data="*{jobmarket}"></div>
       <div id="tolerance" th:data="*{tolerance}"></div>
       <div id="outdoors" th:data="*{outdoors}"></div>
     </div>
