--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -49,7 +49,7 @@
           <input id="healthcare-info" type="checkbox" th:field = "*{healthcare}" />
         </label>
           <label class="left-margin" for="job-market-info">Job Market
-            <input id="job-market-info" type="checkbox" th:field="*{jobMarket}" />
+            <input id="job-market-info" type="checkbox" th:field="*{jobmarket}" />
           </label>
           <label  class="left-margin" for="tolerance-info">Tolerance
             <input id="tolerance-info" type="checkbox" th:field = "*{tolerance}" />
