--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -170,7 +170,13 @@ a:visited {
   width: 4em; height: 4em;
   margin: -2em;
 }
-#icon-container img { display: block; width: 100%; }
+
+/*ICON PLACEMENT AROUND AXIS*/
+#icon-container img {
+  background: rgba(44, 44, 44, 0.8);
+  border-radius: 50%;
+  display: block; width: 100%;
+}
 #deg0 { transform: translate(10em); } /* 12em = half the width of the wrapper */
 #deg27692 { transform: rotate(27.692deg) translate(10em) rotate(-27.692deg); }
 #deg55384 { transform: rotate(55.384deg) translate(10em) rotate(-55.384deg); }
@@ -192,7 +198,7 @@ a:visited {
   transform: translateY(-50%);
 }
 
-/*==================INFO CARDS CSS==================*/
+/*==================ICONS==================*/
 #info-card-container {
     justify-content: center;
     width: 100%;
