--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -125,7 +125,7 @@
 
 <!--FOOTER FRAGMENT-->
 <footer th:fragment="footer">
-    <a class="cntr-text" href="/about">The SimpleSauce Team</a>
+    <a class="footer" href="/about">The SimpleSauce Team</a>
 </footer>
 
 <!--SCRIPTS FRAGMENT-->
