--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -570,7 +570,7 @@ i {
 }
 
 footer {
-    width: 18%;
+    width: 19%;
     margin: 1% auto;
 }
 /*#clean-img div{*/
@@ -579,4 +579,49 @@ footer {
 
 @media (min-width: 768px) {
 
+}
+
+#usernameLbl, #passwordLbl, #emailLbl {
+    font-size: 1.5em;
+    margin-left: 25%;
+}
+
+#loginHeader {
+    display: inline;
+    background-color: rgba(81, 81, 81, 0.67);
+    border-radius: 50px;
+    color: aquamarine;
+    font-size: 5em;
+    padding: 10px;
+}
+
+#username, #password {
+    border-radius: 8px;
+    background-color: #515151;
+    color: #00B4FF;
+    margin: 0 auto;
+    width: 50%;
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
+#email {
+    border-radius: 8px;
+    background-color: #00B4FF;
+    color: #515151;
+    margin: 0 auto;
+    width: 50%;
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
+#btnSubmit {
+    display: block;
+    margin: 1% auto;
+}
+
+#regHead {
+    text-align: center;
+    font-size: 4em;
+    font-weight: bold;
 }
