--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -6,7 +6,7 @@
 
 <div class="container-fluid">
     <form id="formFlds" class="moveFldsDiv" th:action="@{/user/register}" th:method="POST" th:object="${user}">
-        <p id="regHead">Register Here</p>
+        <div id="regHead">Register Here</div>
         <div class="form-group group-to-right">
             <label id="usernameLbl" for="username">Username</label>
             <!--<input id="username" class="form-control" th:field="*{username}" />-->
